Add protobuf build step

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,7 @@
 [submodule "deepfence_agent/plugins/open-tracer"]
 	path = deepfence_agent/plugins/open-tracer
-	url = https://github.com/noboruma/open-tracer
-	branch = open_tracer
+	url = https://github.com/deepfence/open-tracer
+	branch = main
+[submodule "deepfence_agent/plugins/agent-plugins-grpc"]
+	path = deepfence_agent/plugins/agent-plugins-grpc
+	url = https://github.com/deepfence/agent-plugins-grpc
