--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "deepfence_agent/plugins/agent-plugins-grpc"]
 	path = deepfence_agent/plugins/agent-plugins-grpc
 	url = https://github.com/deepfence/agent-plugins-grpc
+[submodule "deepfence_agent/plugins/SecretScanner"]
+	path = deepfence_agent/plugins/SecretScanner
+	url = https://github.com/deepfence/SecretScanner
