--- a/deployment-scripts/helm-charts/deepfence-console/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/values.yaml
@@ -15,7 +15,7 @@ registry:
 
 image:
   repository: "deepfenceio/"
-  tag: latest
+  tag: 1.2.0
   pullPolicy: Always
   pullSecretName: deepfence-docker-secret
 
