--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   deepfence-init-container:
     container_name: df-init-container
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_init_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_init_ce:${DF_IMG_TAG:-1.2.0}
     privileged: true
     ulimits:
       core: 0
@@ -17,7 +17,7 @@ services:
 
   deepfence-postgres:
     container_name: deepfence-postgres
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_postgres_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_postgres_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     restart: on-failure
@@ -32,7 +32,7 @@ services:
 
   deepfence-redis:
     container_name: deepfence-redis
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_redis_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_redis_ce:${DF_IMG_TAG:-1.2.0}
     environment:
       INITIALIZE_REDIS: "Y"
     ulimits:
@@ -49,7 +49,7 @@ services:
 
   deepfence-fetcher:
     container_name: deepfence-fetcher
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_fetcher_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_fetcher_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     depends_on:
@@ -66,7 +66,7 @@ services:
 
   deepfence-topology:
     container_name: deepfence-topology
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_discovery_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_discovery_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     networks:
@@ -82,7 +82,7 @@ services:
 
   deepfence-discovery:
     container_name: deepfence-discovery
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_discovery_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_discovery_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     network_mode: "host"
@@ -100,7 +100,7 @@ services:
 
   deepfence-es:
     container_name: deepfence-es-master
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-1.2.0}
     restart: on-failure
     networks:
       - deepfence_net
@@ -137,7 +137,7 @@ services:
 
   #  deepfence-es-slave1:
   #    container_name: deepfence-es-slave1
-  #    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-latest}
+  #    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-1.2.0}
   #    restart: on-failure
   #    networks:
   #      - deepfence_net
@@ -171,7 +171,7 @@ services:
   #
   #  deepfence-es-slave2:
   #    container_name: deepfence-es-slave2
-  #    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-latest}
+  #    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_elastic_ce:${DF_IMG_TAG:-1.2.0}
   #    restart: on-failure
   #    networks:
   #      - deepfence_net
@@ -205,7 +205,7 @@ services:
 
   deepfence-router:
     container_name: deepfence-router
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_router_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_router_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     networks:
@@ -223,7 +223,7 @@ services:
 
   deepfence-api:
     container_name: deepfence-api
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     tmpfs:
@@ -250,14 +250,14 @@ services:
 
   deepfence-celery:
     container_name: deepfence-celery
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     entrypoint: /app/code/dockerify/celery/entrypoint.sh
     restart: on-failure
     environment:
       - mapper_image_name=${IMAGE_REPOSITORY:-deepfenceio}/deepfence_vulnerability_mapper_ce
-      - image_tag=${DF_IMG_TAG:-latest}
+      - image_tag=${DF_IMG_TAG:-1.2.0}
       - router_service=127.0.0.1:${MGMT_CONSOLE_PORT:-443}
       - VULNERABILITY_SCAN_CONCURRENCY=10
     networks:
@@ -275,7 +275,7 @@ services:
 
   deepfence-backend:
     container_name: deepfence-backend
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_api_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     entrypoint: /app/code/dockerify/backend/entrypoint.sh
@@ -293,7 +293,7 @@ services:
 
   deepfence-ui:
     container_name: deepfence-ui
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_ui_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_ui_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     networks:
@@ -308,7 +308,7 @@ services:
 
   deepfence-diagnosis:
     container_name: deepfence-diagnosis
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_diagnosis_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_diagnosis_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     networks:
@@ -323,7 +323,7 @@ services:
 
   deepfence-vulnerability-mapper:
     container_name: df-vulnerability-mapper
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_vulnerability_mapper_ce:${DF_IMG_TAG:-latest}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_vulnerability_mapper_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     restart: "no"
