--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -18,10 +18,10 @@ createDeepfenceNamespace: "true"
 image:
   # deepfence agent runs as a daemonset in all nodes in the cluster
   name: deepfenceio/deepfence_agent_ce
-  tag: latest
+  tag: 1.2.0
   # cluster agent runs as a single pod
   clusterAgentImageName: deepfenceio/deepfence_discovery_ce
-  clusterAgentImageTag: latest
+  clusterAgentImageTag: 1.2.0
   pullPolicy: Always
   pullSecretName: deepfence-docker-secret
 
