--- a/deepfence_ui/package.json
+++ b/deepfence_ui/package.json
@@ -11,6 +11,7 @@
     "@antv/g2plot": "^2.3.33",
     "@antv/g6": "^4.3.3",
     "@babel/helper-module-imports": "^7.0.0",
+    "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
     "d3-format": "^1.3.2",
     "debug": "^4.1.1",
@@ -37,7 +38,6 @@
     "react-sparklines": "^1.7.0",
     "react-table": "^7.7.0",
     "react-table-6": "^6.11.0",
-    "react-tippy": "^1.2.2",
     "react-tooltip": "4.2.21",
     "react-virtualized": "9.22.3",
     "redux": "^4.0.4",
