--- a/deployment-scripts/helm-charts/deepfence-console/templates/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/deployment.yaml
@@ -197,13 +197,13 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
         - name: docker-sock
           hostPath:
-            path: /var/run/docker.sock
+            path: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
             type: Socket
 {{ end }}
 {{- if eq .Values.mountContainerRuntimeSocket.containerdSock "true" }}
         - name: containerd-sock
           hostPath:
-            path: /run/containerd/containerd.sock
+            path: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
             type: Socket
 {{- end }}
         - name: kernel-sys
@@ -219,11 +219,11 @@ spec:
             - deepfence-topology.default.svc.cluster.local
           volumeMounts:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
-            - mountPath: /var/run/docker.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
               name: docker-sock
 {{ end }}
 {{- if eq .Values.mountContainerRuntimeSocket.containerdSock "true" }}
-            - mountPath: /run/containerd/containerd.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
               name: containerd-sock
 {{ end }}
             - mountPath: /sys/kernel/debug
@@ -304,7 +304,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
         - name: docker-sock
           hostPath:
-            path: /var/run/docker.sock
+            path: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
             type: Socket
         - name: docker-certs
           hostPath:
@@ -318,7 +318,7 @@ spec:
             type: ""
         - name: containerd-sock
           hostPath:
-            path: /run/containerd/containerd.sock
+            path: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
             type: Socket
 {{ end }}
       containers:
@@ -381,7 +381,7 @@ spec:
             - containerPort: 9998
           volumeMounts:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
-            - mountPath: /var/run/docker.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
               name: docker-sock
             - mountPath: /etc/docker/certs.d
               name: docker-certs
@@ -389,7 +389,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.containerdSock "true" }}
             - mountPath: /etc/containerd/certs.d
               name: containerd-certs
-            - mountPath: /run/containerd/containerd.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
               name: containerd-sock
 {{ end }}
           resources:
@@ -449,7 +449,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
         - name: docker-sock
           hostPath:
-            path: /var/run/docker.sock
+            path: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
             type: Socket
         - name: docker-certs
           hostPath:
@@ -463,7 +463,7 @@ spec:
             type: ""
         - name: containerd-sock
           hostPath:
-            path: /run/containerd/containerd.sock
+            path: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
             type: Socket
 {{ end }}
         - name: data
@@ -538,7 +538,7 @@ spec:
               value: "{{ .Values.db.redis.port }}"
           volumeMounts:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
-            - mountPath: /var/run/docker.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
               name: docker-sock
             - mountPath: /etc/docker/certs.d
               name: docker-certs
@@ -546,7 +546,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.containerdSock "true" }}
             - mountPath: /etc/containerd/certs.d
               name: containerd-certs
-            - mountPath: /run/containerd/containerd.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.containerdSockPath }}
               name: containerd-sock
 {{ end }}
             - mountPath: /data
@@ -617,7 +617,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
         - name: docker-sock
           hostPath:
-            path: /var/run/docker.sock
+            path: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
             type: Socket
 {{ end }}
         - name: data
@@ -698,7 +698,7 @@ spec:
             - containerPort: 4041
           volumeMounts:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
-            - mountPath: /var/run/docker.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
               name: docker-sock
 {{ end }}
             - mountPath: /data
@@ -797,7 +797,7 @@ spec:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
         - name: docker-sock
           hostPath:
-            path: /var/run/docker.sock
+            path: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
             type: Socket
 {{ end }}
       containers:
@@ -810,7 +810,7 @@ spec:
             - containerPort: 8009
           volumeMounts:
 {{- if eq .Values.mountContainerRuntimeSocket.dockerSock "true" }}
-            - mountPath: /var/run/docker.sock
+            - mountPath: {{ .Values.mountContainerRuntimeSocket.dockerSockPath }}
               name: docker-sock
 {{ end }}
           resources:
