--- a/deployment-scripts/helm-charts/deepfence-console/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/values.yaml
@@ -87,7 +87,9 @@ dnsResolver: "kube-dns.kube-system.svc.cluster.local"
 # Mount container runtime socket path to agent pod. Agent will detect which runtime it is using these files.
 mountContainerRuntimeSocket:
   dockerSock: "true"
+  dockerSockPath: "/var/run/docker.sock"
   containerdSock: "true"
+  containerdSockPath: "/run/containerd/containerd.sock"
 
 # Optionally set node affinity for topology pod
 topologyNodeAffinityHostName: ""
