add support for sbom gen grpc

--- a/deepfence_agent/plugins/Makefile
+++ b/deepfence_agent/plugins/Makefile
@@ -1,4 +1,4 @@
-all: localinit go bin/open_tracer
+all: localinit go bin/open_tracer bin/vulnerability_sbom_plugin
 
 localinit:
 	$(PWD)/bootstrap.sh
@@ -11,6 +11,10 @@ bin/open_tracer: ./open-tracer/**/*.rs
 go: ./agent-plugins-grpc/proto/*.proto
 	(cd agent-plugins-grpc && make go)
 	cp agent-plugins-grpc/proto/*.go $(PWD)/proto
+
+bin/vulnerability_sbom_plugin: ./vulnerability_sbom_plugin/proto/*.proto
+	(cd vulnerability_sbom_plugin && make go)
+	cp vulnerability_sbom_plugin/proto/*.go $(PWD)/proto
 
 clean:
 	-rm $(PWD)/bin/open_tracer
