--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -28,8 +28,8 @@ stopwaitsecs=30
 killasgroup=true
 priority=10
 
-[program:vulnerability_sbom_plugin]
-command=bash -c "rm -rf /tmp/vulnerability_sbom_plugin.sock && /home/deepfence/bin/vulnerability-sbom-plugin -socket-path /tmp/vulnerability_sbom_plugin.sock -mode grpc-server"
+[program:package_scanner]
+command=bash -c "rm -rf /tmp/package-scanner.sock && /home/deepfence/bin/package-scanner -socket-path /tmp/package-scanner.sock -mode grpc-server"
 numprocs=1
 autostart=true
 autorestart=true
