--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -322,15 +322,13 @@ services:
         max-size: "1g"
 
   deepfence-vulnerability-mapper:
-    container_name: df-vulnerability-mapper
+    container_name: deepfence-vulnerability-mapper
     image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_vulnerability_mapper_ce:${DF_IMG_TAG:-1.2.0}
     ulimits:
       core: 0
     restart: always
     networks:
       - deepfence_net
-    entrypoint: tail
-    command: ["-f","/dev/null"]
     logging:
       driver: "json-file"
       options:
