removing ss from haconfig

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -50,8 +50,8 @@ frontend port_443
     acl is_clair path -i -m beg /fetcher
     use_backend deepfence-fetcher-8001 if is_clair
 
-    acl is_secret_scanner path -i -m beg /secret-scan
-    use_backend secret-scanner-8011 if is_secret_scanner
+    #acl is_secret_scanner path -i -m beg /secret-scan
+    #use_backend secret-scanner-8011 if is_secret_scanner
 
     default_backend deepfence-ui-4042
 
@@ -154,21 +154,21 @@ backend deepfence-fetcher-8001
     http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     server s1 deepfence-fetcher:8001 ssl verify none
 
-backend secret-scanner-8011
-    mode http
-        # http-request set-var(txn.mandatory_auth_verify) str(true)
-        http-request lua.deepfence-key-verify
-        http-request deny unless { var(txn.authorized) eq "true" }
-        acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
+#backend secret-scanner-8011
+#    mode http
+#        # http-request set-var(txn.mandatory_auth_verify) str(true)
+#        http-request lua.deepfence-key-verify
+#        http-request deny unless { var(txn.authorized) eq "true" }
+#        acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
         # Security Headers
-        http-response set-header X-Frame-Options "SAMEORIGIN" unless is_dev_build
-        http-response set-header X-Content-Type-Options "nosniff" unless is_dev_build
-        http-response set-header X-XSS-Protection "1; mode=block" unless is_dev_build
-        http-response set-header Strict-Transport-Security "max-age=31536000; includeSubDomains" unless is_dev_build
-        http-response set-header Cross-Origin-Resource-Policy "same-origin" unless is_dev_build
-        http-response set-header Cross-Origin-Opener-Policy "same-origin" unless is_dev_build
-        http-response set-header Cross-Origin-Embedder-Policy "require-corp" unless is_dev_build
-        server s1 deepfence-secret-scanner-8011 ssl verify none
+#        http-response set-header X-Frame-Options "SAMEORIGIN" unless is_dev_build
+#        http-response set-header X-Content-Type-Options "nosniff" unless is_dev_build
+#        http-response set-header X-XSS-Protection "1; mode=block" unless is_dev_build
+#        http-response set-header Strict-Transport-Security "max-age=31536000; includeSubDomains" unless is_dev_build
+#        http-response set-header Cross-Origin-Resource-Policy "same-origin" unless is_dev_build
+#        http-response set-header Cross-Origin-Opener-Policy "same-origin" unless is_dev_build
+#        http-response set-header Cross-Origin-Embedder-Policy "require-corp" unless is_dev_build
+#        server s1 deepfence-secret-scanner-8011 ssl verify none
 
 backend options_method_handler
     mode http
