--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -88,7 +88,7 @@ backend deepfence-topology-8004
     http-request set-var(txn.deepfence_key) url_param(api_key)
     # http-request set-var(txn.mandatory_auth_verify) str(true)
     http-request lua.deepfence-key-verify
-    http-request deny unless { var(txn.authorized) eq "true" }
+    http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
     # CORS
     http-response set-header Access-Control-Allow-Origin "*" if is_dev_build
@@ -119,7 +119,7 @@ backend fetcher-api-8006
     mode http
     # http-request set-var(txn.mandatory_auth_verify) str(true)
     http-request lua.deepfence-key-verify
-    http-request deny unless { var(txn.authorized) eq "true" }
+    http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
     # CORS
     http-response set-header Access-Control-Allow-Origin "*" if is_dev_build
