Use internal router without auth for registry scan

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -122,7 +122,7 @@ backend vulnerability-mapper-8001
     mode http
     # http-request set-var(txn.mandatory_auth_verify) str(true)
     http-request lua.deepfence-key-verify
-    http-request deny unless { var(txn.authorized) eq "true" }
+    http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
     # Security Headers
     http-response set-header X-Frame-Options "SAMEORIGIN" unless is_dev_build
