--- a/.gitmodules
+++ b/.gitmodules
@@ -13,4 +13,4 @@
 [submodule "deepfence_agent/plugins/SecretScanner"]
 	path = deepfence_agent/plugins/SecretScanner
 	url = https://github.com/deepfence/SecretScanner
-	branch = dfHttpServer2
+	branch = master
