--- a/ci-cd-integrations/github-actions/.github/workflows/main.yml
+++ b/ci-cd-integrations/github-actions/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
         docker_config_path="$(pwd)/deepfence_docker"
         docker_creds=$(echo -n "${{ secrets.DOCKER_USER }}:${{ secrets.DOCKER_PASS }}" | base64)
         echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$docker_creds\"}}}" > "$docker_config_path/config.json"
-        docker --config "$docker_config_path" pull deepfenceio/deepfence_vulnerability_mapper:latest
+        docker --config "$docker_config_path" pull deepfenceio/deepfence_package_scanner_ce:1.3.0
         rm -rf deepfence_docker
-        docker run --rm --net=host --privileged=true --cpus='0.3' -v /var/run/docker.sock:/var/run/docker.sock:rw deepfenceio/deepfence_vulnerability_mapper_ce:latest -mgmt-console-ip=$DEEPFENCE_CONSOLE_IP -deepfence-key="$DEEPFENCE_KEY" -image-name="$FULL_IMAGE_NAME" -fail-cve-count=$FAIL_CVE_COUNT -fail-cve-score=$FAIL_CVE_SCORE -scan-type="base,java,python,ruby,php,nodejs,js,dotnet"
+        docker run --rm --net=host --privileged=true --cpus='0.3' -v /var/run/docker.sock:/var/run/docker.sock:rw deepfenceio/deepfence_package_scanner_ce:1.3.0 -vulnerability-scan=true -output=table -mode=local -mgmt-console-url=$DEEPFENCE_CONSOLE_IP -deepfence-key="$DEEPFENCE_KEY" -source="$FULL_IMAGE_NAME" -fail-on-count=$FAIL_CVE_COUNT -fail-on-score=$FAIL_CVE_SCORE -scan-type="base,java,python,ruby,php,nodejs,js,dotnet"
 
     # Push to dockerhub
     - name: Push to Docker Hub
