--- a/deepfence_agent/fargate/Dockerfile.scratch
+++ b/deepfence_agent/fargate/Dockerfile.scratch
@@ -1,3 +1,11 @@
+FROM golang:1.17-bullseye AS build
+RUN apt-get update \
+    && apt-get install -y bash make git gcc \
+    && cd /go \
+    && git clone https://github.com/deepfence/syft \
+    && cd /go/syft \
+    && go build -v -o syftCli .
+
 FROM scratch
 
 MAINTAINER Deepfence Inc
@@ -8,12 +16,13 @@ WORKDIR /
 COPY tools/apache/scope/docker/deepfence_exe deepfence/usr/local/discovery/deepfence-discovery
 COPY fargate/bin/ deepfence/bin/
 COPY etc/certs/* deepfence/etc/filebeat/
+COPY plugins/docker_bin/ deepfence/bin/
+COPY --from=build /go/syft/syftCli /deepfence/usr/local/bin/syft
 
 COPY run_discovery.sh /deepfence/home/deepfence/
 COPY fargate/run_discovery_loop.sh /deepfence/home/deepfence/
 
 COPY tools/apache/scope/docker/uploadFile.sh deepfence/home/deepfence/uploadFile.sh
-COPY fileUploader deepfence/usr/local/bin/fileUploader
 
 COPY misc/deepfence/df-utils/agent_auth/agentAuth /deepfence/usr/local/bin/agentAuth
 COPY misc/deepfence/df-utils/get_cloud_instance_id/getCloudInstanceId /deepfence/usr/local/bin/getCloudInstanceId
