Modified init_es_config.sh & added envar for elasticsearch scheme

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -258,6 +258,7 @@ services:
     environment:
       ANALYZER_REPLICATION_FACTOR: 1
       ANALYZER_SERVICE_NAME_PREFIX: "deepfence-analyzer-"
+      ELASTICSEARCH_SCHEME: "http"
     networks:
       - deepfence_net
     depends_on:
