changes for elasticsearch index in api #373

--- a/deepfence_backend/dockerify/api/Dockerfile
+++ b/deepfence_backend/dockerify/api/Dockerfile
@@ -24,6 +24,7 @@ ENV PYTHONUNBUFFERED=1 \
     POSTGRES_USER_DB_NAME=users \
     POSTGRES_USER_DB_SSLMODE=disable \
     JWT_ALGORITHM=RS256 \
+    ELASTICSEARCH_SCHEME=http \
     ELASTICSEARCH_HOST=deepfence-es \
     ELASTICSEARCH_PORT=9200 \
     ELASTICSEARCH_CVE_DOC_TYPE=cve \
