Modified agent helm chart and entrypoint.sh to include resolveDomain parameter

--- a/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
@@ -28,6 +28,8 @@ spec:
             - "{{ required "managementConsoleUrl is required" .Values.managementConsoleUrl }}"
             - "{{ required "managementConsolePort is required" .Values.managementConsolePort }}"
           env:
+            - name: RESOLVE_DOMAIN
+              value: "{{ .Values.resolveDomain }}"
             - name: DEEPFENCE_KEY
               valueFrom:
                 secretKeyRef:
