--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -46,6 +46,8 @@ userDefinedTags: ""
 # It will be suffixed with hostname - prod-cluster-aks-agentpool-123456-vmss000001
 clusterName: ""
 
+resolveDomain: "true"
+
 enableGraphReport: "true"
 
 # Mount container runtime socket path to agent pod. Agent will detect which runtime it is using these files.
